--- a/packages/create-leafjs-app/templates/default/index.html
+++ b/packages/create-leafjs-app/templates/default/index.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script src="./dist/bundle.min.js"></script>
-  <link rel="stylesheet" href="./src/styles/global.css">
+  <title>Leaf App</title>
 </head>
 <body>
   <my-app></my-app>
